--- a/CarShowRoom/App.config
+++ b/CarShowRoom/App.config
@@ -4,7 +4,7 @@
     <!-- For more information on Entity Framework configuration, visit http://go.microsoft.com/fwlink/?LinkID=237468 -->
     <section name="entityFramework" type="System.Data.Entity.Internal.ConfigFile.EntityFrameworkSection, EntityFramework, Version=6.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" requirePermission="false" />
     <!-- For more information on Entity Framework configuration, visit http://go.microsoft.com/fwlink/?LinkID=237468 -->
-  </configSections>
+  </configSections> 
   <startup>
     <supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.5.2" />
   </startup>
@@ -26,6 +26,7 @@
     </DbProviderFactories>
   </system.data>
   <connectionStrings>
-    <add name="TestModelContainer" connectionString="metadata=res://*/TestModel.csdl|res://*/TestModel.ssdl|res://*/TestModel.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=(localDb)\MSSQLLocalDB;initial catalog=ModelFirstDatabaseTest;integrated security=True;MultipleActiveResultSets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient" />
+    <add name="DBConnection" connectionString="data source=(localdb)\MSSQLLocalDB;Initial Catalog=CarShowRoom.Context;Integrated Security=True;"
+ providerName="System.Data.SqlClient"/>
   </connectionStrings>
 </configuration>
