--- a/CarShowRoom/App.config
+++ b/CarShowRoom/App.config
@@ -26,7 +26,7 @@
     </DbProviderFactories>
   </system.data>
   <connectionStrings>
-    <add name="DBConnection" connectionString="data source=(localdb)\MSSQLLocalDB;Initial Catalog=CarShowRoom.Context;Integrated Security=True;"
+    <add name="DBConnection" connectionString="data source=(localdb)\MSSQLLocalDB;Initial Catalog=CarShowRoom;Integrated Security=True;"
  providerName="System.Data.SqlClient"/>
   </connectionStrings>
 </configuration>
